19.12.2019 add map, add marker on map, add button on fixed top-menu @-moz-document url-prefix() {   .apartment-details-header__gallery .gallery-img a::after {     top: -34px;   } } @supports (-ms-ime-align:auto) {   .apartment-details-header__gallery .gallery-img a::after {     top: -32px;   } }

--- a/resources/assets/styles/layouts/apartment-details.scss
+++ b/resources/assets/styles/layouts/apartment-details.scss
@@ -62,21 +62,54 @@
     position: absolute;
   }
   .navigation {
+    display: flex;
+    justify-content: space-around;
     box-sizing: border-box;
     position: fixed;
     color: transparent;
     background-color: transparent;
     width: 100%;
     height: 70px;
-    //color: white;
-    transition: all 0.5s ease;
     transform: translateY(-100%);
     z-index: 0;
+    .div {
+      display: flex;
+      justify-content: space-around;
+      margin: auto;
+      padding-left: 10%;
+      .button--blue {
+        width: 250px;
+        height: 36px;
+        margin-right: 20px;
+      }
+      .button--white {
+        border: 2px solid rgba(183, 184, 199, 0.25);
+      }
+    }
+    .div_price {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      p {
+        margin-top: 3px;
+      }
+    }
+    h1 {
+      display: inline-block;
+      color: #222634;
+      @include over-extra;
+      font-size: 24px;
+      font-weight: 900;
+      margin: auto;
+    }
     &--relative {
-      //position: absolute;
       position: relative;
       top: -30px;
       transform: translateY(0%);
+    }
+    .navigation__title {
+      height: 70px;
+      display: flex;
     }
     &.is-fixed {
       position: fixed;
@@ -89,17 +122,11 @@
       border-bottom: 1px solid #eeeff3;
       text-align: center;
       align-content: center;
-      .navigation__title {
-        height: 70px;
-        display: flex;
-        h1 {
-          color: #222634;
-          @include over-extra;
-          font-size: 24px;
-          font-weight: 900;
-          margin: auto;
-        }
-      }
+      transition: all 0.5s ease;
+      //.navigation__title {
+      //  height: 70px;
+      //  display: flex;
+      //}
     }
   }
   &-header {
@@ -691,6 +718,65 @@
     padding-bottom: 120px;
     @include media-breakpoint-down(md) {
       padding-bottom: 70px;
+    }
+    &__buttons-on-map {
+      height: 200px;
+    }
+    position: relative;
+    &__checkbox-position {
+      position: absolute;
+    }
+    &__checkbox {
+      position: absolute;
+      opacity: 0;
+      //top: 0;
+      //left: 190px;
+      & + label {
+        position: relative;
+        margin-left: 30px;
+        cursor: pointer;
+        padding: 0;
+        transition: 0.3s;
+      }
+      & + label:before {
+        content: url("images/global/heart-white.svg");
+        position: absolute;
+        display: inline-block;
+        top: 0;
+        left: 190px;
+        z-index: 20;
+      }
+      &:checked + label:before {
+        content: url("images/global/heart-red.svg");
+      }
+    }
+    .apartment-tile {
+      ////position: relative;
+      //&__checkbox-position {
+      //  position: absolute;
+      //}
+      //&__checkbox {
+      //  //position: absolute;
+      //  opacity: 0;
+      //  & + label {
+      //    position: relative;
+      //    margin-left: 30px;
+      //    cursor: pointer;
+      //    padding: 0;
+      //    transition: 0.3s;
+      //  }
+      //  & + label:before {
+      //    content: url("images/global/heart-white.svg");
+      //    position: absolute;
+      //    display: inline-block;
+      //    top: 27px;
+      //    left: -10px;
+      //    z-index: 20;
+      //  }
+      //  &:checked + label:before {
+      //    content: url("images/global/heart-red.svg");
+      //  }
+      //}
     }
     .container {
       max-width: 910px;
@@ -1530,5 +1616,15 @@
         display: none;
       }
     }
+  }
+}
+@-moz-document url-prefix() {
+  .apartment-details-header__gallery .gallery-img a::after {
+    top: -34px;
+  }
+}
+@supports (-ms-ime-align:auto) {
+  .apartment-details-header__gallery .gallery-img a::after {
+    top: -32px;
   }
 }
